--- a/GameJams.html
+++ b/GameJams.html
@@ -73,7 +73,7 @@
 									</div>
 									<div class="col-4 col-6-medium col-12-small">
 										<section class="box">
-											<a href="#" class="image featured"><img src="images/TDLGameplay.png" alt="" /></a>
+											<a href="Twisted-Loop.html" class="image featured"><img src="images/TDLGameplay.png" alt="" /></a>
 											<header>
 												<h3>Big Brain Game Jam 2.0</h3>
 											</header>
@@ -82,14 +82,14 @@
 												the highest ranking in visuals and theme.</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="https://pootpootpoot.itch.io/twisted-loop" class="button alt">View Submission</a></li>
+													<li><a href="Twisted-Loop.html" class="button alt">View Submission</a></li>
 												</ul>
 											</footer>
 										</section>
 									</div>
 									<div class="col-4 col-6-medium col-12-small">
 										<section class="box">
-											<a href="#" class="image featured"><img src="images/OubliettesCover.png" alt="" /></a>
+											<a href="Oubliettes.html" class="image featured"><img src="images/OubliettesCover.png" alt="" /></a>
 											<header>
 												<h3>Great Harvest Game Jam</h3>
 											</header>
@@ -99,14 +99,14 @@
 											</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="https://pootpootpoot.itch.io/oubliettes" class="button alt">View Submission</a></li>
+													<li><a href="Oubliettes.html" class="button alt">View Submission</a></li>
 												</ul>
 											</footer>
 										</section>
 									</div>
 									<div class="col-4 col-6-medium col-12-small">
 										<section class="box">
-											<a href="#" class="image featured"><img src="images/ManDownCover.png" alt="" /></a>
+											<a href="https://pootmoop-studio.itch.io/man-down" class="image featured"><img src="images/ManDownCover.png" alt="" /></a>
 											<header>
 												<h3>Extra Credits Game Jam #6</h3>
 											</header>
@@ -122,7 +122,7 @@
 									</div>
 									<div class="col-4 col-6-medium col-12-small">
 										<section class="box">
-											<a href="#" class="image featured"><img src="images/DiaperChangeCover.png" alt="" /></a>
+											<a href="https://pootmoop-studio.itch.io/diaperchange" class="image featured"><img src="images/DiaperChangeCover.png" alt="" /></a>
 											<header>
 												<h3>My First Game Jam: Summer 2020</h3>
 											</header>
