--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
 
               <!-- Content -->
               <article class="box post">
-                <a href="#" class="image featured"><img src="images/ProPic2.png"  style = "width: 25%; padding-top: 8%; margin: auto;" alt="" /></a>
+                <a class="image featured"><img src="images/ProPic2.png"  style = "width: 25%; padding-top: 8%; margin: auto;" alt="" /></a>
                 <header>
                   <h2>Welcome!</h2>
                 </header>
                 <p>
                   My name is Georges Brunet and I’m an aspiring Game Developer based in Niwot, Colorado. 
                   Ever since I can remember, I have always loved to play video games and been fascinated by the work behind them. 
-                  Whether the game is a AAA title or something as simple as Flappy bird, I have always seen the charm of the art. 
+                  Whether the game is a AAA title or something as simple as Pong, I have always seen the charm of the art. 
                   I am turning this passion and the skills and experiences I've acquired in professional and academic settings into creating wonderful games.
                   These creations will be available in the projects tab, as well as other past, present and future projects!
                 </p>
