--- a/GameJams.html
+++ b/GameJams.html
@@ -56,7 +56,7 @@
 									<!-- Game Jam Boxes! -->
 									<div class="col-4 col-6-medium col-12-small">
 										<section class="box">
-											<a href="#" class="image featured"><img src="images/MMcover.png" alt="" /></a>
+											<a href="Mission-Moon.html" class="image featured"><img src="images/MMcover.png" alt="" /></a>
 											<header>
 												<h3>Game Off Game Jam 2020</h3>
 											</header>
@@ -66,7 +66,7 @@
 											</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="#" class="button alt">View Submission</a></li>
+													<li><a href="Mission-Moon.html" class="button alt">View Submission</a></li>
 												</ul>
 											</footer>
 										</section>
