--- a/Mission-Moon.html
+++ b/Mission-Moon.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Twisted Loop</title>
+		<title>Mission Moon</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -59,61 +59,32 @@
 
 								<!-- Content -->
 									<article class="box post">
-										<a href="#" class="image featured"><img src="images/TDLCoverArt.png"/></a>
+										<a href="#" class="image featured"><img src="images/MMBannerArt.png"/></a>
 										<header>
-											<h2>Twisted Loop</h2>
-											<p>Big Brain Game Jam 2.0: Spooky Jam Edition</p>
+											<h2>Mission: 13151514</h2>
+											<p>Game Off 2020 Game Jam</p>
 										</header>
 										<p>
-											This 3 day game jam posed the usual challenges, with the addition of new ones! This was also the first 
-											ranked Game Jam I participated in independently. It was rather small in participation, with only seven 
-											submissions among the 30 something people that joined this game jam. Some people entered as groups, others as 
-											solo. The theme for the jam was to be Halloween oriented, or "spooky", so I created assets to match!
-											I wanted to use the knowledge that I gained in Unity with 2D rendering pipelines in unison 
-											with 3d objects. I wanted to test out the interactions of 3D objects with 2D objects. I also wanted to experiment
-											with shaders as I had only used them in a very light capacity in Oubliettes.
+											This month long project was a very big learning experience. Mission Moon is a game created by me and Olivia Maciejewska. 
+											The game jam required that we use Github for version control and to make all of our code public and available to everyone! 
+											I'm a strong believer in transparent development so I personally loved this idea. The original game was to be a resource 
+											management survival, where the player had to balance the resources produced to redistribute them to multiple aspects of the ship 
+											in order to make it to the moon. Upon playing the finished version, we realized the game was missing an "umph", or the most 
+											important element, fun. We overhauled it with 4 days remaining to make it a survival shooter! Olivia designed a neat enemy AI with 
+											solid pathfinding and combat elements as well as directives. I implemented a combat system for the player, dynamic layered animation schemes 
+											for all entities in game, a wave system to distribute the enemies at random locations across the ship, object and player health 
+											system, win and lose states, world-space indicators, a dynamic-rendering pipeline, as well as all the shaders, and art assets.
+
+											
 										</p>
-										<header>
-											<h3>Inspiration</h3>
-										</header>
-										<p>
-											I did not want to create a huge game given the time constraint, but was keen on achieving the 3D to 2D 
-											interactions mentioned above. One minigame that came to mind was the pole dodging minigame in Kung Fu Chaos.
-											 In that game, the player must dodge a spinning pole as it speeds up with time. I decided to remake this concept
-											 with 2D sprites as characters, and a 3D spinning pole.
-										</p>
-										<header>
-											<h3>How its made</h3>
-										</header>
-										<p>
-											I used the universal rendering pipeline to combine the environments for both. I used GIMP to make the sprites, 
-											using the shape of the player in Oubliettes to speed up the process, and background as well as the bases the 
-											players are located. I then used Blender to make the pole. I cast a shader on the background to give the effect 
-											of lava and implement the atmosphere and visual themes I love to place in my games. I scripted the pole to move 
-											independently and attached 3D colliders onto the AI characters to trigger animations based on chance. I also added 
-											a rate of failure on the AI, so that they would not simply dodge or reflect the pole every time. As for the player 
-											character, I added a smaller collider to allow for some freedom as the pole spun faster. 
-										</p>
-										<p>
-											As the time constraint was short, there are a plethora of implementations I did not have time to make, and had 
-											to compromise for simplicity to complete the game. I wanted to create a sort of fade effect from shaders on the player 
-											and AI characters when they we struck by the pole and landed onto the lava, but I could not make the effect I desired 
-											in time so I made the AI shoot out of range of the pole when struck, and then relocated them to their respective base 
-											after a certain amount of time. I implemented the same thing for the player character, but experienced some strange behavior.
-											I wanted to add some sound and visual effects to the experience, such as the pole spinning, hitting characters, music, the 
-											characters expressing shouts of pain when struck, their fading into lava, as well as camera shakes when a character was struck 
-											by the pole. Unfortunately, I could not implement these in the 72 hour period given. 
-											I was able to squash out the main bugs in time for submission, but there is still room for improvement! I intend to update 
-											this game when I have the time to achieve all the desired effects, but still, I am happy with the results.
-										</p>
+										
 										<header>
 											<h3>Results</h3>
 										</header>
 										<p>
-											After voting, my game received 2nd place, and ranked 1st for visuals, theme, and tied for fun. There are still some bugs
-											to squash, so I received 3rd place for bug freeness.
-											As this game did not have any sounds, I did receive the lowest grade and ranking for that specific criteria. But had I scored just
-											half a point out of five in that area, I would've received first place! So lesson learned, always do a little more.
+											Ratings are underway until December 21 2020, so I will update this page when it is complete! I loved making the assets for this 
+											game as well as the effects and programming the aspects of the game. I plan on creating a game like this in 3D soon and will also 
+											release it on itch.io. Check the Game Jams page in projects for more!
 										</p>
 									</article>
 
@@ -122,12 +93,12 @@
 
 								<!-- Sidebar -->
 								<section class="box">
-									<a href="https://pootpootpoot.itch.io/twisted-loop" class="image featured"><img src="images/TDLGameplay.png" alt="" /></a>
+									<a href="https://pootpootpoot.itch.io/mission-13151514" class="image featured"><img src="images/ArmoryPic.png" alt="" /></a>
 										<p> Visit the page on itch.io to download the game!
 										</p>
 										<footer>
 											<ul class="actions">
-												<li><a href="https://pootpootpoot.itch.io/twisted-loop" class="button alt">View itch.io Page</a></li>
+												<li><a href="https://pootpootpoot.itch.io/mission-13151514" class="button alt">View itch.io Page</a></li>
 											</ul>
 										</footer>
 								</section>
