Update Education Tab

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <section id="banner">
             <header>
               <h2>Hello. My name is Georges.</h2>
-              <p>Programmer, Data Scientist, Artist, and Video Game Enthusiast</p>
+              <p>Programmer, Artist, and Video Game Enthusiast</p>
             </header>
           </section>
       </section>
