--- a/Education.html
+++ b/Education.html
@@ -69,6 +69,13 @@
 										<header>
 											<h2 style= "text-align: center;">Certificates</h2>
 										</header>
+										<a href="#" class="image featured"><img src="images/RITlogoCertificate.png" style="width: 40%; padding-top: 8%; margin: auto;" alt="" /></a>
+										<h3 style= "text-align: center;"> RIT Unreal Engine Foundations </h3>
+										<p style= "text-align: center;">
+											Provides beginner, intermediate, and advanced methodologies in the Unreal Engine for production.
+											<br>
+											<i style= "text-align: center;">Started December 2020</i>
+										</p>
 										<a href="#" class="image featured"><img src="images/HarvardXLogo.png" style="width: 40%; padding-top: 8%; margin: auto;" alt="" /></a>
 										<h3 style= "text-align: center;"> Computer Science for Game Development </h3>
 										<p style= "text-align: center;">
