--- a/Mission-Moon.html
+++ b/Mission-Moon.html
@@ -73,7 +73,7 @@
 											important element, fun. We overhauled it with 4 days remaining to make it a survival shooter! Olivia designed a neat enemy AI with 
 											solid pathfinding and combat elements as well as directives. I implemented a combat system for the player, dynamic layered animation schemes 
 											for all entities in game, a wave system to distribute the enemies at random locations across the ship, object and player health 
-											system, win and lose states, world-space indicators, a dynamic-rendering pipeline, as well as all the shaders, and art assets.
+											system, win and lose states, world-space indicators, a dynamic-rendering pipeline, as well as all the shaders and art assets.
 
 											
 										</p>
