--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                   These creations will be available in the projects tab, as well as other past, present and future projects!
                 </p>
                 <p>
-                  I am a French native but I have lived and studied in different parts of the world. 
+                  I have dual-citizenship in the US and France but I have lived and studied in different parts of the world. 
                   I moved away from France in 2003 and since then I have lived or studied in Carmel (Indiana), Millburn (New Jersey),
                   Sao Paulo (Brazil), Cambridge (United Kingdom), Marbella (Spain), and Boulder (Colorado). I am currently living in Niwot, Colorado.
                   I enjoy comedy and love the company of my friends and family. In my free time I like to make art, whether it be s
