--- a/Skills.html
+++ b/Skills.html
@@ -51,14 +51,13 @@
 
 								<!-- Content -->
 									<article class="box post" style="margin-bottom:500px;">
-										<!--<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>-->
 										<header>
 											<h2 style= "text-align: center;"> Skills </h2>
 										</header>
 										<p style= "text-align: center;">
 											Hover or Click on the topics below to find my levels of proficiency in their respective fields!
 										</p>
-										<section>
+										<!--<section>-->
 											<div class="icon">
 												<div class="iconBx active" data-id = "content1">
 													<h3> Languages </h3>
@@ -86,8 +85,8 @@
 													<h3> Microsoft Office </h3>
 												</div>
 											</div>
-										</section>
-										<section>
+										<!--</section>-->
+										<!--<section>-->
 											<div class="content">
 												<div class="contentBx active" id="content1">
 												   
@@ -177,7 +176,7 @@
 													</div>
 												  </div>
 											  </div>
-										</section>
+										<!--</section>-->
 									</article>
 
 							</div>
