--- a/Education.html
+++ b/Education.html
@@ -74,7 +74,7 @@
 										<p style= "text-align: center;">
 											Provides beginner, intermediate, and advanced methodologies in the Unreal Engine for production.
 											<br>
-											<i style= "text-align: center;">Started December 2020</i>
+											<i style= "text-align: center;">Completed December 2020</i>
 										</p>
 										<a href="#" class="image featured"><img src="images/HarvardXLogo.png" style="width: 40%; padding-top: 8%; margin: auto;" alt="" /></a>
 										<h3 style= "text-align: center;"> Computer Science for Game Development </h3>
