--- a/GameJams.html
+++ b/GameJams.html
@@ -106,7 +106,7 @@
 									</div>
 									<div class="col-4 col-6-medium col-12-small">
 										<section class="box">
-											<a href="https://pootmoop-studio.itch.io/man-down" class="image featured"><img src="images/ManDownCover.png" alt="" /></a>
+											<a href="https://therealmoopmoop.itch.io/man-down" class="image featured"><img src="images/ManDownCover.png" alt="" /></a>
 											<header>
 												<h3>Extra Credits Game Jam #6</h3>
 											</header>
