--- a/Portfolio.html
+++ b/Portfolio.html
@@ -59,108 +59,43 @@
 								<!-- Start UE4 Tutorials -->
 								<div class="col-4 col-6-medium col-12-small">
 									<section class="box">
-										<a href="CelShader.html"class="image featured"><img src="images/CelShaderPics/CelShaderPreview.png" alt="" /></a>
+										<a href="UE4-Tutorials.html"class="image featured"><img src="images/EducationPics/UE4logo.png"/></a>
 										<header>
-											<h3>Cel Shader</h3>
+											<h3>Unreal Engine 4 Tutorials</h3>
 										</header>
 										<p>
-											This tutorial entails how to implement a cel shader for a "paper-like" feel to your production in Unreal Engine 4.
+											A selection of Unreal Engine 4 tutorials to help you implement wonderful features to enhance your projects.
 										</p>
 										<footer>
 											<ul class="actions">
-												<li><a href="CelShader.html" class="button alt">View Implementation</a></li>
+												<li><a href="UE4-Tutorials.html" class="button alt">View Tutorials</a></li>
 											</ul>
 										</footer>
 									</section>
 								</div>
 								<div class="col-4 col-6-medium col-12-small">
 									<section class="box">
-										<a href="PersistentTrails.html"class="image featured"><img src="images/PersistentTrailPics/TrailPreview1.png" alt="" /></a>
+										<a href="CurseEater.html"class="image featured"><img src="images/PersistentTrailPics/TrailPreview1.png" alt="" /></a>
 										<header>
-											<h3>Persistent Trails with Render Targets</h3>
+											<h3>Curse Eater: UE4 Game Project</h3>
 										</header>
 										<p>
-											This tutorial entails how to implement persistent trails such as footsteps in snow, sand, mud, and more in Unreal Engine 4.
+											An RPG set in a distant land made using UE4 in ongoing development.
 										</p>
 										<footer>
 											<ul class="actions">
-												<li><a href="PersistentTrails.html" class="button alt">View Implementation</a></li>
+												<li><a href="CurseEater.html" class="button alt">View Game</a></li>
 											</ul>
 										</footer>
 									</section>
 								</div>
-								<div class="col-4 col-6-medium col-12-small">
-									<section class="box">
-										<a href="MaterialOutline.html"class="image featured"><img src="images/MatOutlinePics/MaterialOutlinePreview.png" alt="" /></a>
-										<header>
-											<h3>Material Outlines</h3>
-										</header>
-										<p>
-											This tutorial entails how to implement material outlines using post-process materials to make assets stand out in Unreal Engine 4.
-										</p>
-										<footer>
-											<ul class="actions">
-												<li><a href="MaterialOutline.html" class="button alt">View Implementation</a></li>
-											</ul>
-										</footer>
-									</section>
-								</div>
-								<!--<div class="col-4 col-6-medium col-12-small">
-									<section class="box">
-										<a href="SharedLandscape.html"class="image featured"><img src="images/MatOutlinePics/MaterialOutlinePreview.png" alt="" /></a>
-										<header>
-											<h3>Shared Landscape System</h3>
-										</header>
-										<p>
-											This tutorial builds on the Persistent Trails tutorial and entails how to implement communication between layers for your landscape in Unreal Engine 4.
-										</p>
-										<footer>
-											<ul class="actions">
-												<li><a href="SharedLandscape.html" class="button alt">View Implementation</a></li>
-											</ul>
-										</footer>
-									</section>
-								</div>
-								<div class="col-4 col-6-medium col-12-small">
-									<section class="box">
-										<a href="FoliageDeform.html"class="image featured"><img src="images/MatOutlinePics/MaterialOutlinePreview.png" alt="" /></a>
-										<header>
-											<h3>Foliage Deformation System</h3>
-										</header>
-										<p>
-											This tutorial builds on the Shared Landscape Deformation System tutorial and entails how to implement foliage deformation in Unreal Engine 4.
-										</p>
-										<footer>
-											<ul class="actions">
-												<li><a href="FoliageDeform.html" class="button alt">View Implementation</a></li>
-											</ul>
-										</footer>
-									</section>
-								</div>
-								<div class="col-4 col-6-medium col-12-small">
-									<section class="box">
-										<a href="GlobalWindSys.html"class="image featured"><img src="images/MatOutlinePics/MaterialOutlinePreview.png" alt="" /></a>
-										<header>
-											<h3>Global Wind System</h3>
-										</header>
-										<p>
-											This tutorial builds on the Deformation system tutorial and entails how to implement a global wind system to your environments in Unreal Engine 4.
-										</p>
-										<footer>
-											<ul class="actions">
-												<li><a href="GlobalWindSys.html" class="button alt">View Implementation</a></li>
-											</ul>
-										</footer>
-									</section>
-								</div>
-								<!-- End UE4 Tutorials -->
 								<div class="col-4 col-6-medium col-12-small">
 									<section class="box">
 										<a href="https://github.com/GeorgesABrunet/Twisted-Loop/tree/master/BigBrainGameJam" class="image featured"><img src="images/GameJamPics/TDLGameplay.png" alt="" /></a>
 										<header>
 											<h3>Twisted Loop on Unity, C#</h3>
 										</header>
-										<p> The project's code and assets are freely available for download on Github!
+										<p> My game jam submission to the Big Brain Game Jam 2.0. The project's code and assets are freely available for download on Github!
 										</p>
 										<footer>
 											<ul class="actions">
@@ -175,7 +110,7 @@
 										<header>
 											<h3>Mission Moon on Unity, C#</h3>
 										</header>
-										<p> This prototype holds various implementations such as basic AI, shooting system, health and resource management system, wave spawning, 2.5D shaders, and more.
+										<p> Made with Olivia Maciejewska as our submission to the Game Off 2020 Game Jam, this prototype holds various implementations such as AI, shooting system, health and resource management system, wave spawning, 2.5D shaders, and more.
 										</p>
 										<footer>
 											<ul class="actions">
@@ -184,7 +119,7 @@
 										</footer>
 									</section>
 								</div>
-								<h2 style = "margin: auto;"> MORE COMING SOON! </h2>
+								<h2 style = "margin: auto;"> ALWAYS MORE COMING SOON! </h2>
 								<!-- End Game Jam Boxes-->
 
 							</div>
