--- a/index.html
+++ b/index.html
@@ -78,24 +78,24 @@
                   <h2>Welcome!</h2>
                 </header>
                 <p>
-                  My name is Georges Brunet and I’m an aspiring Game Developer based in Niwot, Colorado. 
-                  Ever since I can remember, I have always loved to play video games and been fascinated by the work behind them. 
-                  Whether the game is a AAA title or something as simple as Pong, I have always seen the charm of the art. 
-                  I am turning this passion into creating wonderful games with the experiences I've gained in professional and academic settings.
-                  These creations will be available in the projects and portfolio tabs!
+                  My name is Georges Brunet and I’m an aspiring Game Developer based in Colorado. 
+                  Video games have always played a crucial role in my life and the work behind them fascinates me.
+                  Whether the game is a AAA title or something as simple as Pong, I have always seen the charm of the art, so I could not resist 
+                  pursuing a career in their development. I have a background in math and coding that has been a backbone in designing and making 
+                  the features I would like to see, specifically in the domains of game design and technical art.
+                  Most if not all of my creations will be available in the projects and portfolio tabs!
                 </p>
                 <p>
                   I graduated from the University of Colorado, Boulder’s School of Arts & Sciences with a B.A. in Mathematics 
                   with a concentration in Applicability and Statistics in August 2019. Throughout my years at the university 
                   I worked as a Data Analytics Intern at Aspen Growth Ventures, a French Tutor at the French and Italian Department of
-                  the University of Colorado, Boulder, and as a Data Science Intern at Standard Alcohol, Inc.
+                  the University of Colorado, Boulder, and as a Data Science Intern at Standard Alcohol, Inc. As of May 2020, I have fully 
+                  dedicated my time to a career in the games industry.
                 </p>
                 <p>
-                  I have dual-citizenship in the US and France but I have lived and studied in different parts of the world. 
-                  I moved away from France in 2003 and since then I have lived or studied in Carmel (Indiana), Millburn (New Jersey),
-                  Sao Paulo (Brazil), Cambridge (United Kingdom), Marbella (Spain), and Boulder (Colorado). I am currently living in Niwot, Colorado.
-                  I enjoy comedy and love the company of my friends and family. In my free time I like to make art, whether it be s
-                  culptures or paintings, watch sports, or my personal favorite: play video games.
+                  In my free time, I enjoy trying out new features to implement, watching comedy, and the company of friends and family. 
+                  I like to make art, whether it be drawings, sculptures or paintings. I watch sports, and my personal favorite: play video games. 
+                  Have a look around my website and see if my work interests you. If it does, I can be contacted on LinkedIn, or email.
                 </p>
               </article>
             </div>
