--- a/CurseEater.html
+++ b/CurseEater.html
@@ -52,7 +52,7 @@
 
 								<!-- Content -->
 									<article class="box post">
-										<a class="image featured"><img src="images/GameJamPics/OubliettesGP.png"/></a>
+										<!-- Add game cover pic here -->
 										<header>
 											<h2>Curse Eater</h2>
 											<p>A 3D RPG made using Unreal Engine 4</p>
@@ -81,12 +81,15 @@
 										<p>
 											I wanted the game's difficulty to be fluid and dynamic. This is so the players can determine the best time to begin an attack on their enemies depending on the biome 
 											they intend of ridding of curses, but also pose the threat of needing to change their playstyle at any moment. In order to do this, the game uses a 
-											deep weather system that dynamically changes by giving buffs or debuffs to the enemies based on the current weather pattern. What that means, in the game, is that heavy 
+											deep weather system that dynamically changes by giving buffs or debuffs to the enemies in the biome based on the current weather pattern. What that means, in the game, is that heavy 
 											rain would strenghten the enemies of the temperate biome, but weaken the enemies of the savannah. Some biomes also distinctly do not allow certain weather patterns, like 
 											snow in the arid desert. This aspect of gameplay enriches the player's approach because it is also visibly predictable. A player can expect rain, snow, thunder, wind, and more 
-											based on the color and movement of the skies. The weather system is highly modular and once perfected may likely become available on the UE marketplace for free (!!!).
+											based on the color and movement of the skies. Preparation can also be done as the weather shifts from sunny to thick clouds. These weather patterns are mostly random so the player must 
+											also expect the unexpected! 
+											The weather system is highly modular and once perfected may likely become available on the UE marketplace for free (!!!).
 										</p>
 										<!-- add gif of thunderstorm -->
+										<a class="image featured"><img src="images/CurseEaterCont/CurseEaterThunderstorm.gif" style = "width: 90%; margin: auto; margin-top: 10%;" /></a>
 										<p>
 											The weather system is not the only driver of difficulty, though. The enemies in the game will, as one can expect, become tougher throughout 
 											the game. As the player progresses, enemies will strike harder, have more health, and use different methods of attacking. Each enemy will have more optimal 
@@ -96,6 +99,7 @@
 											eclipse as the in-game days pass.
 										</p>
 									<!-- add gif of eclipse -->
+									<a class="image featured"><img src="images/CurseEaterCont/CurseEaterEclipse.gif" style = "width: 90%; margin: auto; margin-top: 10%;" /></a>
 										<p>
 											The combat of Curse Eater revolves around schools of combat. I got this idea from the anime Demon Slayer. The show gives some of its characters "schools" that 
 											allow these characters to use abilities based on certain elements. The idea seemed pleasant because it gives the player the choice of preference. Some enemies may be 
@@ -103,7 +107,7 @@
 											to attack an enemy. The player may also find items that enhance their resistances against certain schools as well as their damage against certain biomes. This makes the landscape 
 											more appealing to fully explore as secret areas may hold treasures that enhance the playstyle of the players.
 										</p>
-										
+										<h3 style = "margin: auto;">THIS GAME IS UNDER ONGOING DEVELOPMENT AND THE CONTENTS OF THIS PAGE MAY CHANGE. MORE COMING SOON!</h3>
 									</article>
 
 							</div>
