--- a/Portfolio.html
+++ b/Portfolio.html
@@ -59,7 +59,7 @@
 								<!-- Start UE4 Tutorials -->
 								<div class="col-4 col-6-medium col-12-small">
 									<section class="box">
-										<a href="UE4-Tutorials.html"class="image featured"><img src="images/EducationPics/UE4logo.png"/></a>
+										<a href="UE4-Tutorials.html"class="image featured"><img src="images/EducationPics/UE4logo.png" style="width: 50%; margin: auto; padding-top: 10%;"/></a>
 										<header>
 											<h3>Unreal Engine 4 Tutorials</h3>
 										</header>
@@ -75,12 +75,12 @@
 								</div>
 								<div class="col-4 col-6-medium col-12-small">
 									<section class="box">
-										<a href="CurseEater.html"class="image featured"><img src="images/PersistentTrailPics/TrailPreview1.png" alt="" /></a>
+										<a href="CurseEater.html"class="image featured"><img src="images/CurseEaterCont/CurseEaterBanner.gif" style="padding-top: 15%; padding-bottom:5%;"/></a>
 										<header>
-											<h3>Curse Eater: UE4 Game Project</h3>
+											<h3>Curse Eater: UE4 Project</h3>
 										</header>
 										<p>
-											An RPG set in a distant land made using UE4 in ongoing development.
+											A 3D Mediaval Fantasy RPG set in a distant land made using UE4 in ongoing development.
 										</p>
 										<footer>
 											<ul class="actions">
