--- a/UE4-Tutorials.html
+++ b/UE4-Tutorials.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Georges Brunet</title>
+		<title>UE4 Tutorials</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -50,7 +50,7 @@
 						<!-- Portfolio -->
 						<section>
 							<header class="major">
-								<h2>PORTFOLIO</h2>
+								<h2>Unreal Engine 4 Tutorials</h2>
 							</header>
 							<div class="row">
 
