--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
                 <p>
                   My name is Georges Brunet and I’m an aspiring Game Developer based in Colorado. 
                   Video games have always played a crucial role in my life and the work behind them fascinates me.
-                  Whether the game is a AAA title or something as simple as Pong, I have always seen the charm of the art, so I could not resist 
-                  pursuing a career in their development. I have a background in math and coding that has been a backbone in designing and making 
+                  Whether the game is a AAA title or something as simple as Pong, I have always seen the charm of the art. I have a background in math and coding that has been a backbone in designing and making 
                   the features I would like to see, specifically in the domains of game design and technical art.
                   Most if not all of my creations will be available in the projects and portfolio tabs!
                 </p>
